{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 182,
  "lineage": "152cd85d-740c-2930-5dc9-41ce99da0322",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c490b66ce4e9b75",
            "domain": "vpc",
            "id": "eipalloc-05c490b66ce4e9b75",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-33-29.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.33.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip-1"
            },
            "tags_all": {
              "Name": "nat_ip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea0764839cc71963",
            "domain": "vpc",
            "id": "eipalloc-0ea0764839cc71963",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-0-220-98.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.220.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip-2"
            },
            "tags_all": {
              "Name": "nat_ip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arch-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:internet-gateway/igw-0899487ec890b5e0d",
            "id": "igw-0899487ec890b5e0d",
            "owner_id": "243646955027",
            "tags": {
              "Name": "arch-igw"
            },
            "tags_all": {
              "Name": "arch-igw"
            },
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:loadbalancer/app/application-tier-lb/2d2b29762a705656",
            "arn_suffix": "app/application-tier-lb/2d2b29762a705656",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-application-tier-lb-1975858850.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:loadbalancer/app/application-tier-lb/2d2b29762a705656",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-tier-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de4ffd6950df7a45"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ae363e7e6c0cf52"
              },
              {
                "subnet_id": "subnet-0df7dae96196c08f3"
              }
            ],
            "subnets": [
              "subnet-02ae363e7e6c0cf52",
              "subnet-0df7dae96196c08f3"
            ],
            "vpc_id": "vpc-02aa1ef81ed06e2b2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.arch-sg",
            "aws_subnet.arch-pub-sub-1",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:loadbalancer/app/front-end-lb/873d0ece335bd77e",
            "arn_suffix": "app/front-end-lb/873d0ece335bd77e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-end-lb-1569664863.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:loadbalancer/app/front-end-lb/873d0ece335bd77e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-end-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de4ffd6950df7a45"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ae363e7e6c0cf52"
              },
              {
                "subnet_id": "subnet-0df7dae96196c08f3"
              }
            ],
            "subnets": [
              "subnet-02ae363e7e6c0cf52",
              "subnet-0df7dae96196c08f3"
            ],
            "vpc_id": "vpc-02aa1ef81ed06e2b2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.arch-sg",
            "aws_subnet.arch-pub-sub-1",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:listener/app/application-tier-lb/2d2b29762a705656/3ba68b9aa9bf61c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:targetgroup/application-tier-lb-tg/181e3ba73acfe540",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:listener/app/application-tier-lb/2d2b29762a705656/3ba68b9aa9bf61c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:loadbalancer/app/application-tier-lb/2d2b29762a705656",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_tier",
            "aws_lb_target_group.application_tier",
            "aws_security_group.arch-sg",
            "aws_subnet.arch-pub-sub-1",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:listener/app/front-end-lb/873d0ece335bd77e/f773dcf93a0c1c40",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:targetgroup/front-end-lb-tg/d1659b6305587ed2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:listener/app/front-end-lb/873d0ece335bd77e/f773dcf93a0c1c40",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:loadbalancer/app/front-end-lb/873d0ece335bd77e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.arch-sg",
            "aws_subnet.arch-pub-sub-1",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:targetgroup/application-tier-lb-tg/181e3ba73acfe540",
            "arn_suffix": "targetgroup/application-tier-lb-tg/181e3ba73acfe540",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:targetgroup/application-tier-lb-tg/181e3ba73acfe540",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "application-tier-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:targetgroup/front-end-lb-tg/d1659b6305587ed2",
            "arn_suffix": "targetgroup/front-end-lb-tg/d1659b6305587ed2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:243646955027:targetgroup/front-end-lb-tg/d1659b6305587ed2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "front-end-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c490b66ce4e9b75",
            "association_id": "eipassoc-04ce070cb89f32043",
            "connectivity_type": "public",
            "id": "nat-067687319be249d92",
            "network_interface_id": "eni-088af7237fa6c825f",
            "private_ip": "13.13.1.28",
            "public_ip": "15.207.33.29",
            "subnet_id": "subnet-02ae363e7e6c0cf52",
            "tags": {
              "Name": "nat-gw-1"
            },
            "tags_all": {
              "Name": "nat-gw-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip-1",
            "aws_internet_gateway.arch-igw",
            "aws_subnet.arch-pub-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea0764839cc71963",
            "association_id": "eipassoc-0d90b78ddb4aea70f",
            "connectivity_type": "public",
            "id": "nat-0b5618b28597432cc",
            "network_interface_id": "eni-0fa830f1d35adb151",
            "private_ip": "13.13.2.215",
            "public_ip": "65.0.220.98",
            "subnet_id": "subnet-0df7dae96196c08f3",
            "tags": {
              "Name": "nat-gw-2"
            },
            "tags_all": {
              "Name": "nat-gw-2"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip-2",
            "aws_internet_gateway.arch-igw",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:route-table/rtb-02a28af77929f65b1",
            "id": "rtb-02a28af77929f65b1",
            "owner_id": "243646955027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-067687319be249d92",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_1"
            },
            "tags_all": {
              "Name": "private_route_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip-1",
            "aws_internet_gateway.arch-igw",
            "aws_nat_gateway.nat-gw-1",
            "aws_subnet.arch-pub-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:route-table/rtb-0d7399a0599c7b743",
            "id": "rtb-0d7399a0599c7b743",
            "owner_id": "243646955027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b5618b28597432cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_2"
            },
            "tags_all": {
              "Name": "private_route_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip-2",
            "aws_internet_gateway.arch-igw",
            "aws_nat_gateway.nat-gw-2",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:route-table/rtb-0cc68e222c2023e98",
            "id": "rtb-0cc68e222c2023e98",
            "owner_id": "243646955027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0899487ec890b5e0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b59ef9513d5ea73",
            "route_table_id": "rtb-02a28af77929f65b1",
            "subnet_id": "subnet-0a977a26429f25d23"
          },
          "dependencies": [
            "aws_eip.nat_ip-1",
            "aws_internet_gateway.arch-igw",
            "aws_nat_gateway.nat-gw-1",
            "aws_route_table.private_route-1",
            "aws_subnet.arch-pri-sub-1",
            "aws_subnet.arch-pub-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028233aecfb970b52",
            "route_table_id": "rtb-0d7399a0599c7b743",
            "subnet_id": "subnet-0143dd2a627af742c"
          },
          "dependencies": [
            "aws_eip.nat_ip-2",
            "aws_internet_gateway.arch-igw",
            "aws_nat_gateway.nat-gw-2",
            "aws_route_table.private_route-2",
            "aws_subnet.arch-pri-sub-2",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0783bd7b5bde4fa4f",
            "route_table_id": "rtb-0cc68e222c2023e98",
            "subnet_id": "subnet-02ae363e7e6c0cf52"
          },
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_route_table.public_route",
            "aws_subnet.arch-pub-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0481fe9cb133fe1fe",
            "route_table_id": "rtb-0cc68e222c2023e98",
            "subnet_id": "subnet-0df7dae96196c08f3"
          },
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_route_table.public_route",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arch-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:security-group/sg-0de4ffd6950df7a45",
            "description": "Allow ALL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de4ffd6950df7a45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "arch-sg",
            "name_prefix": "",
            "owner_id": "243646955027",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arch-sg"
            },
            "tags_all": {
              "Name": "arch-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arch-pri-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:subnet/subnet-0a977a26429f25d23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "13.13.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a977a26429f25d23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243646955027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arch-pri-sub-1"
            },
            "tags_all": {
              "Name": "arch-pri-sub-1"
            },
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arch-pri-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:subnet/subnet-0143dd2a627af742c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "13.13.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0143dd2a627af742c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243646955027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arch-pri-sub-2"
            },
            "tags_all": {
              "Name": "arch-pri-sub-2"
            },
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arch-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:subnet/subnet-02ae363e7e6c0cf52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "13.13.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ae363e7e6c0cf52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243646955027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arch-pub-sub-1"
            },
            "tags_all": {
              "Name": "arch-pub-sub-1"
            },
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arch-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:subnet/subnet-0df7dae96196c08f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "13.13.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df7dae96196c08f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243646955027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arch-pub-sub-2"
            },
            "tags_all": {
              "Name": "arch-pub-sub-2"
            },
            "vpc_id": "vpc-02aa1ef81ed06e2b2"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arch-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:vpc/vpc-02aa1ef81ed06e2b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "13.13.0.0/16",
            "default_network_acl_id": "acl-015bd0d0f37853902",
            "default_route_table_id": "rtb-0662f0b51cb13b1d0",
            "default_security_group_id": "sg-03474408b074c5ba4",
            "dhcp_options_id": "dopt-015f69a413fb5d3ec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02aa1ef81ed06e2b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0662f0b51cb13b1d0",
            "owner_id": "243646955027",
            "tags": {
              "Name": "arch-vpc"
            },
            "tags_all": {
              "Name": "arch-vpc"
            }
          }
        }
      ]
    }
  ]
}